# quest_gen

./: .env  README.md  docker-compose.yaml  model.env
.devcontainer/: devcontainer.json  docker-compose.dev.yaml
app/: docker-compose.yaml
client/: Dockerfile  Welcome.py  pyproject.toml
client/app/config/: qtypes.json  syllabus.json
client/app/db/: vector_db.py
client/app/prompts/: basic.py  conversation.py
client/app/questgen/: base.py  doubt_chat.py  paper.py  quest_gen.py  subject.py  topic.py
client/data/: modern_india.txt
client/pages/: 1_Add_To_Collection.py  2_Practice.py
server/: Dockerfile  pyproject.toml
server/app/: server.py
server/app/llm/: llama3.py
