[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["ABHYUDAY TRIPATHI <tripathi.abhyuday@siemens.com>"]
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = ">=3.10,<3.13"
ipykernel = "^6.29.5"
langchain-chroma = "^0.1.2"
langchain-huggingface = "^0.0.3"
langchain-community = "^0.2.10"
chromadb = "^0.5.5"
langserve = "^0.2.2"
streamlit = "^1.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
